subprojects {
    apply plugin: 'java'

    group = 'com.robsutar.rnu'
    version = '1.5.8'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Jar).configureEach {
        archiveFileName.set("${rootProject.name}-${project.name}-${version}.jar")
    }

    repositories {
        mavenCentral()
    }
}
